2013-11-17  Xian55  <hq.protonox@gmail.com>

	* Block.cs:
	* ChangeLog:
	* BlockManager.cs: 
